--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ p.enter-text {
   color: #c9e2e1;
   font-family: 'proxima-nova', sans-serif;
   font-style: italic;
-  font-weight: 300;term
+  font-weight: 300;
   padding-top: 30px;
   font-size: 32px;
 }
